@@ -4,6 +4,7 @@ Log of changes:	tilp (cables, calcs, files, ticonv)
 
 - 18/07/2006, version 0.20 (0.1.3, 0.2.4, 0.2.2, 0.0.5): roms
 	- use ticalcs_probe instead of the previous code (easier & clearer)
+	- added Seamonkey to the browser list, suggest Firefox instead of the obsolete Mozilla Suite (kevin)
 
 - 12/07/2006, version 0.19 (0.1.3, 0.2.3, 0.2.2, 0.0.5): roms
 	- for now, use this naming scheme for TI9x var filenames: folder.var.extension
